CREATED /users/login, UPDATED users.model.js
